[package]
name = "luxpool"
version = "0.2.2"
edition = "2024"
authors = ["Chukwuma Okoroji <dandychux@gmail.com>"]
description = "A lightweight, zero-dependency thread pool and dynamic task queue."
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/dandychux/luxpool"
homepage = "https://github.com/dandychux/luxpool"
keywords = ["concurrency", "thread-pool", "parallel", "tasks", "queue"]
categories = ["concurrency", "asynchronous"]

[dependencies]
